--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
 /backend/__pycache__
+/backend/database/__pycache__
+/backend/models/__pycache__
+/backend/routes/__pycache__
 # /backend/zomato.csv
 
 /frontend/node_modules
